--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-*.o
-*.class
-
-*.aux
-*.log
-*.out
-*.synctex.gz
-
-/.idea/
-/.idea_modules/
-/project/project/
-/project/target/
-/target/
-/submission/
-/lib_managed/
+.idea/
+.idea_modules/
+project/project/
+target/
